[package]
name = "bin2json"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["bin2json-tool"]

[dependencies]
thiserror = "1.0.30"
serde_json = "1.0.72"
deku = "0.15.1"
serde = { version = "1.0.130", features = ["derive"] }
evalexpr = { version = "8", features = ["serde_support"] }
rsa = "0.8"
rand = "0.8.4"
sha2 = { version = "0.10.6", features = ["oid"] }
sha3 = { version = "0.10.6", features = ["oid"] }
